gcc-10 (10-20200405-1) UNRELEASED; urgency=medium

  * GCC snapshot, taken from the trunk (20200405, 705510a708d).
  * Update libgccjit and libgphobos symbols files.
  * Remove the libgcc-sN provides from the last upload.
  * Don't install the empty gcc_lib_dir in gcc-N-base.

  [ Nicolas Boulenguez <nicolas@debian.org> ]
  * Remove some dependencies older than oldoldstable.

 -- Matthias Klose <doko@debian.org>  Sun, 05 Apr 2020 10:34:40 +0200

gcc-10 (10-20200402-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200402, 86c92411320).
  * Fix PR target/94254 (PPC), proposed patch.
  * Update libstdc++6 symbols file for armel. Closes: #954954.
  * libgcc-sN: Provide libgcc-sN with an epoch version to rebuild gcc-8.
    Closes: #954826.

 -- Matthias Klose <doko@debian.org>  Thu, 02 Apr 2020 15:01:48 +0200

gcc-10 (10-20200324-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200324, 906b3eb9df6).
  * libgcc-N-dev: Include sanitizer headers again. Closes: #954751.
  * gm2: Define lang_register_spec_functions for jit. Closes: #954438.

 -- Matthias Klose <doko@debian.org>  Tue, 24 Mar 2020 13:38:16 +0100

gcc-10 (10-20200321-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200321, 497498c878d).
  * Update gm2 from the gm2 trunk.
  * Move limits.h and syslimits.h into <gcc-lib-dir>/include, and remove
    <gcc-lib-dir>/include-fixed.
  * Update libgphobos symbols file.

 -- Matthias Klose <doko@debian.org>  Sat, 21 Mar 2020 13:14:07 +0100

gcc-10 (10-20200312-2) unstable; urgency=medium

  * Ship the include-fixed directory again, for a working #include <limits.h>.

 -- Matthias Klose <doko@debian.org>  Fri, 13 Mar 2020 09:42:15 +0100

gcc-10 (10-20200312-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200312, daf2852b883).
  * For all runtime libraries, generate dependencies on libgcc-sN instead
    on libgccN.
  * Use llvm 10 for the amdgcn offload compiler, when available.