@@ -1540,6 +1540,79 @@ Description: GNU Standard C++ Library v3 (documentation files)
  alphabetical list, compound list, file list, namespace members,
  compound members and file members.
 
+Package: gnat-10
+Architecture: any
+Priority: optional
+Pre-Depends: ${misc:Pre-Depends}
+Depends: gcc-10-base (= ${gcc:Version}), gcc-10 (>= ${gcc:SoftVersion}), ${dep:libgnat}, ${dep:libcdev}, ${shlibs:Depends}, ${misc:Depends}
+Suggests: gnat-10-doc, ada-reference-manual-2012, gnat-10-sjlj
+Breaks: gnat-4.9-base (= 4.9-20140330-1)
+Replaces: gnat-4.9-base (= 4.9-20140330-1)
+# gnat-base 4.9-20140330-1 contains debian_packaging.mk by mistake.
+Conflicts: gnat-4.9, gnat-5, gnat-6, gnat-7, gnat-8, gnat-9,
+# Previous versions conflict for (at least) /usr/bin/gnatmake.
+Description: GNU Ada compiler
+ GNAT is a compiler for the Ada programming language. It produces optimized
+ code on platforms supported by the GNU Compiler Collection (GCC).
+ .
+ This package provides the compiler, tools and runtime library that handles
+ exceptions using the default zero-cost mechanism.
+
+Package: libgnat-10
+X-DH-Build-For-Type: target
+Section: libs
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Priority: optional
+Depends: gcc-10-base (= ${gcc:Version}), ${shlibs:Depends}, ${misc:Depends}
+Description: runtime for applications compiled with GNAT (shared library)
+ GNAT is a compiler for the Ada programming language. It produces optimized
+ code on platforms supported by the GNU Compiler Collection (GCC).
+ .
+ The libgnat library provides runtime components needed by most
+ applications produced with GNAT.
+ .
+ This package contains the runtime shared library.
+
+Package: libgnatvsn10-dev
+X-DH-Build-For-Type: target
+Section: libdevel
+Architecture: any
+Priority: optional
+Depends: gcc-10-base (= ${gcc:Version}), gnat-10 (= ${gnat:Version}),
+ libgnatvsn10 (= ${gnat:Version}), ${misc:Depends}
+Conflicts: libgnatvsn4.9-dev,
+ libgnatvsn5-dev, libgnatvsn6-dev, libgnatvsn7-dev,
+Description: GNU Ada compiler selected components (development files)
+ GNAT is a compiler for the Ada programming language. It produces optimized
+ code on platforms supported by the GNU Compiler Collection (GCC).
+ .
+ The libgnatvsn library exports selected GNAT components for use in other
+ packages, most notably ASIS tools. It is licensed under the GNAT-Modified
+ GPL, allowing to link proprietary programs with it.
+ .
+ This package contains the development files and static library.
+
+Package: libgnatvsn10
+X-DH-Build-For-Type: target
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Priority: optional
+Section: libs
+Depends: gcc-10-base (= ${gcc:Version}), libgnat-10 (= ${gnat:Version}),
+ ${shlibs:Depends}, ${misc:Depends}
+Description: GNU Ada compiler selected components (shared library)
+ GNAT is a compiler for the Ada programming language. It produces optimized
+ code on platforms supported by the GNU Compiler Collection (GCC).
+ .
+ The libgnatvsn library exports selected GNAT components for use in other
+ packages, most notably ASIS tools. It is licensed under the GNAT-Modified
+ GPL, allowing to link proprietary programs with it.
+ .
+ This package contains the runtime shared library.
+
 Package: gdc-10
 Architecture: any
 Priority: optional
