@@ -433,38 +433,6 @@ Please update it when necessary.
  
  @endif target-libada
  
-@@ -52033,13 +51893,8 @@ maybe-install-target-libada:
- @if target-libada
- maybe-install-target-libada: install-target-libada
- 
--install-target-libada: installdirs
--	@: $(MAKE); $(unstage)
--	@r=`${PWD_COMMAND}`; export r; \
--	s=`cd $(srcdir); ${PWD_COMMAND}`; export s; \
--	$(NORMAL_TARGET_EXPORTS) \
--	(cd $(TARGET_SUBDIR)/libada && \
--	  $(MAKE) $(TARGET_FLAGS_TO_PASS)  install)
-+# Dummy target for uninstallable.
-+install-target-libada:
- 
- @endif target-libada
- 
-@@ -52048,13 +51903,8 @@ maybe-install-strip-target-libada:
- @if target-libada
- maybe-install-strip-target-libada: install-strip-target-libada
- 
--install-strip-target-libada: installdirs
--	@: $(MAKE); $(unstage)
--	@r=`${PWD_COMMAND}`; export r; \
--	s=`cd $(srcdir); ${PWD_COMMAND}`; export s; \
--	$(NORMAL_TARGET_EXPORTS) \
--	(cd $(TARGET_SUBDIR)/libada && \
--	  $(MAKE) $(TARGET_FLAGS_TO_PASS)  install-strip)
-+# Dummy target for uninstallable.
-+install-strip-target-libada:
- 
- @endif target-libada
- 
 @@ -52065,24 +51915,8 @@ maybe-info-target-libada:
  @if target-libada
  maybe-info-target-libada: info-target-libada
