@@ -98,7 +98,7 @@ Author: Matthias Klose <doko@debian.org>
  target_modules = { module= zlib; };
  target_modules = { module= rda; };
 -target_modules = { module= libada; };
-+target_modules = { module= libada; no_install=true; no_check=true;
++target_modules = { module= libada; no_check=true;
 +		   missing= info;
 +		   missing= dvi;
 +		   missing= html;
