@@ -881,7 +881,7 @@ with_ada := $(call envfilt, ada, , , $(with_ada))
 ifeq ($(DEB_STAGE)-$(filter libgnat, $(with_rtlibs)),rtlibs-)
   with_ada := disabled for rtlibs stage
 endif
-with_ada := disabled for GCC 10
+# with_ada := disabled for GCC 10
 
 #ifneq ($(single_package),yes)
 #  with_separate_gnat := yes
