@@ -149,8 +149,7 @@ ifeq ($(with_ada),yes)
     endif
     debian_patches += ada-lib-info-source-date-epoch
     debian_patches += ada-armel-libatomic
-    # applied for trunk builds as well:
-    #debian_patches += ada-kfreebsd
+    debian_patches += ada-kfreebsd
     debian_patches += ada-749574
     debian_patches += ada-lib-info-file-prefix-map
     debian_patches += ada-perl-shebang
@@ -221,7 +220,6 @@ debian_patches += gcc-ice-apport
 debian_patches += skip-bootstrap-multilib
 debian_patches += libffi-ro-eh_frame_sect
 debian_patches += libffi-mips
-debian_patches += ada-kfreebsd
 
 # sigaction on sparc changed between glibc 2.19 and 2.21
 ifeq (,$(filter 2.1%, $(shell dpkg-query -l libc-bin | awk '/^.i/ {print $$3}')))
@@ -265,7 +263,8 @@ debian_patches += go-testsuite
 #debian_patches += libasan-sparc
 
 # Has to be refreshed manually as described in the header.
-#debian_patches += ada-changes-in-autogen-output
+# Mostly for Ada, but not only (bootstrap-no-unneeded-libs).
+debian_patches += ada-changes-in-autogen-output
 
 series_stamp = $(stampdir)/02-series-stamp
 series: $(series_stamp)
