@@ -7,6 +7,7 @@ gcc-10 (10-20200405-1) UNRELEASED; urgency=medium
 
   [ Nicolas Boulenguez <nicolas@debian.org> ]
   * Remove some dependencies older than oldoldstable.
+  * Build gnat. Remove obsolete no_install option for libgnat.
 
  -- Matthias Klose <doko@debian.org>  Sun, 05 Apr 2020 10:34:40 +0200
 
